[package]
name = "select-random-fastx"
description = "Select random entries from fastx files"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
repository = "https://github.com/sebschmi/fastx-statistics-rs"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
seq_io = "0.4.0-alpha.0"
indicatif = "0.17.1"
log = "0.4.17"
simplelog = "0.12.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
